bonefish+stippi: PThreads didn't have their array for the TLS values initialized. From what we can tell, this would have been a problem for any program using pthreads, but since all threads are pthreads now, it was much more likely to be encountered. Like in Beam as reported in #4949 (which via libbind seems to use some pthread stuff).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34161 a95241bf-73f2-0310-859d-f6bbb57e9c96